--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
-{
-  "name": "Test",
-  "description": "Test",
-  "version": "0.0.0",
+  "name": "mybot",
+  "version": "1.0.0",
+  "description": "",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "Olwin1",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0"
+    "discord.js": "^11.4.2"
   }
 }
