--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
-  "name": "mybot",
-  "version": "1.0.0",
-  "description": "",
+{
+
+  "name": "Test",
+
+  "description": "Test",
+
+  "version": "0.0.0",
+
   "main": "bot.js",
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+    "start": "node bot.js"
+
   },
-  "author": "Olwin1",
-  "license": "ISC",
+
   "dependencies": {
-    "discord.js": "^11.4.2"
+
+    "discord.js": "11.1.0",
+
+    "request": "2.81.0"
+
   }
+
 }
